[package]
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2021"
readme = "README.md"
name = "blackpill-spiflash"
version = "0.1.0"

[features]
default = ["black_pill"]
black_pill = ["stm32f4xx-hal"]

[dependencies.stm32f4xx-hal]
optional = true
version = "0"
features = ["rt", "stm32f411"]

[dependencies]
# alloc-cortex-m = "0"
cortex-m = "0"
cortex-m-rt = "0"
cortex-m-semihosting = "0"
embedded-hal = "0"
panic-halt = "0"

spi-memory = { git = "https://github.com/bootstrap-prime/spi-memory.git" }
# spi-memory = "0"
# nb = "1"

# this lets you use `cargo fix`!
[[bin]]
name = "blackpill-spiflash"
test = false
bench = false

[profile.release]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
