[package]
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2021"
readme = "README.md"
name = "blackpill-spiflash"
version = "0.1.0"

[features]
default = ["black_pill", "write_flash"]
# default = ["black_pill"]
black_pill = ["stm32f4xx-hal"]
write_flash = []

[dependencies.stm32f4xx-hal]
optional = true
version = "0"
features = ["rt", "stm32f411"]
git = "https://github.com/stm32-rs/stm32f4xx-hal.git"

[dependencies]
# alloc-cortex-m = "*"
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
embedded-hal = "*"
panic-halt = "*"
spi-memory = { git = "https://github.com/sjm42/spi-memory.git" }
# spi-memory = { git = "https://github.com/bootstrap-prime/spi-memory.git" }
# spi-memory = { path = "../spi-memory" }
# spi-memory = "0"
# nb = "1"

# this lets you use `cargo fix`!
[[bin]]
name = "blackpill-spiflash"
test = false
bench = false

[profile.release]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
